🐛 Correct spacing on macos

--- a/common/browser/themes/shared/dotui/dot.inc.css
+++ b/common/browser/themes/shared/dotui/dot.inc.css
@@ -85,6 +85,7 @@
 
     #nav-bar {
         padding-left: 90px;
+        padding-right: 0px !important;
     }
 %endif
 
